Refactor project structure and enhance UI components
- Updated index.html with SEO meta tags and improved viewport settings.
- Added .prettierrc.json for consistent code formatting.
- Replaced package-lock.json with pnpm-lock.yaml for package management.
- Introduced HeroSection component to replace Header, enhancing the landing experience.
- Refactored About, Services, Projects, and Contact components for better structure and styling.
- Implemented Tailwind CSS for styling and responsiveness.
- Removed unused CSS files and adjusted the overall layout for improved user experience.

--- a/index.html
+++ b/index.html
@@ -3,20 +3,57 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/new.png" />
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-/>
-
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rashmi Joshi </title>
+
+  <!-- SEO Meta Tags -->
+  <title>Rashmi Joshi - Frontend Developer & Web Designer | Portfolio</title>
+  <meta name="description"
+    content="Rashmi Joshi is a passionate Frontend Developer and Web Designer specializing in React, JavaScript, HTML, CSS, and responsive web design. View my portfolio of modern web applications and projects." />
+  <meta name="keywords"
+    content="Rashmi Joshi, Frontend Developer, Web Designer, React Developer, JavaScript, HTML, CSS, Portfolio, Web Development, UI/UX, Responsive Design" />
+  <meta name="author" content="Rashmi Joshi" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+
+  <!-- Open Graph Meta Tags for Social Media -->
+  <meta property="og:title" content="Rashmi Joshi - Frontend Developer & Web Designer" />
+  <meta property="og:description"
+    content="Passionate Frontend Developer creating engaging, user-friendly digital experiences. Specializing in React, JavaScript, and modern web technologies." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.rashmijoshi.me/" />
+  <meta property="og:image" content="https://www.rashmijoshi.me/new.png" />
+  <meta property="og:site_name" content="Rashmi Joshi Portfolio" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Rashmi Joshi - Frontend Developer & Web Designer" />
+  <meta name="twitter:description"
+    content="Passionate Frontend Developer creating engaging, user-friendly digital experiences. View my portfolio and projects." />
+  <meta name="twitter:image" content="https://www.rashmijoshi.me/new.png" />
+
+  <!-- Favicon and Icons -->
+  <link rel="icon" type="image/png" href="/new.png" />
+  <link rel="apple-touch-icon" href="/new.png" />
+
+  <!-- External Resources -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- Preconnect for performance -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  <!-- Theme Color for Mobile Browsers -->
+  <meta name="theme-color" content="#00f0ff" />
+  <meta name="msapplication-navbutton-color" content="#00f0ff" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 </head>
+
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
-
 
 </html>
